Revert "bringing over new endpoint for groups API"
