# src/controllers/GroupMembershipController.js
@@ -25,6 +25,7 @@ async function getGroupMembers (req, res) {
  * @param res the response
  */
 async function addGroupMember (req, res) {
+  console.log(req)
   const result = await service.addGroupMember(
     req.authUser.isMachine ? 'M2M' : req.authUser,
     req.params.groupId,
@@ -74,26 +75,10 @@ async function getGroupMembersCount (req, res) {
   res.send(result)
 }
 
-/**
- * Get group members
- * @param req the request
- * @param res the response
- */
-async function getMemberGroups (req, res) {
-  const result = await service.getMemberGroups(
-    req.authUser.isMachine ? 'M2M' : req.authUser,
-    req.params.memberId,
-    req.query.depth ? Number(req.query.depth) : 50
-  )
-  helper.setResHeaders(req, res, result)
-  res.send(result)
-}
-
 module.exports = {
   getGroupMembers,
   addGroupMember,
   getGroupMember,
   deleteGroupMember,
-  getGroupMembersCount,
-  getMemberGroups
+  getGroupMembersCount
 }
